# meshDiff

./: .gitignore  CMakeLists.txt  COPYING  README.md  pythonConfigure.bat
example/: meshDiffTest.py
src/lib/: binheap.h  kdtreeAdaptor.h  mesh.cpp  mesh.h  mesh_utils.h  nanoflann.hpp  range.h  ray.h  test.cpp  vec.h  vecext.h
src/python/: meshDiff.cpp
src/python36/: meshDiff.cpp
